# fav_depth_controller

./: CMakeLists.txt  package.xml
bags/: bag_2020-11-26-17-21-23.bag  bag_2020-11-26-17-23-09.bag  bag_2020-11-26-17-25-27.bag  bag_2020-11-26-17-28-10.bag  bag_2020-11-26-17-30-13.bag  bag_2020-11-26-17-33-18.bag  bag_2020-11-26-17-34-31.bag  bag_2020-11-26-18-03-48.bag  bag_2020-11-26-18-26-29.bag  bag_2020-11-26-18-28-56.bag  bag_2020-11-26-18-29-21.bag  bag_2020-11-26-18-32-48.bag  bag_2020-11-26-18-39-28.bag  team3exp2param  team3exp5param
cfg/: DepthControl.cfg
csv/: bag_2020-11-26-17-36-18-control_error.csv  bag_2020-11-26-17-36-18-depth_setpoint.csv  bag_2020-11-26-17-36-18-parameters.csv  bag_2020-11-26-17-36-18-rosout.csv  bag_2020-11-26-17-36-18-state.csv  bag_2020-11-26-17-36-18-vertical_thrust.csv  bag_2020-11-26-17-48-54-control_error.csv  bag_2020-11-26-17-48-54-depth_setpoint.csv  bag_2020-11-26-17-48-54-parameters.csv  bag_2020-11-26-17-48-54-rosout.csv  bag_2020-11-26-17-48-54-state.csv  bag_2020-11-26-17-48-54-vertical_thrust.csv  bag_2020-11-26-18-06-35-parameters.csv  bag_2020-11-26-18-06-35-rosout.csv  bag_2020-11-26-18-06-35-state.csv  bag_2020-11-26-18-06-35-vertical_thrust.csv  bag_2020-11-26-18-34-18-control_error.csv  bag_2020-11-26-18-34-18-depth_setpoint.csv  bag_2020-11-26-18-34-18-mavros-setpoint_motor-setpoint.csv  bag_2020-11-26-18-34-18-parameters.csv  bag_2020-11-26-18-34-18-rosout.csv  bag_2020-11-26-18-34-18-state.csv  bag_2020-11-26-18-34-18-vertical_thrust.csv  bag_2020-11-26-18-41-47-control_error.csv  (+47 more)
msg/: ParametersList.msg  (+2 more)
(+8 files in other folders)
